# hiberota-1.1

./: .dockerignore  .env.example  .env.local.example  .env.staging.example  .gitignore  AGENTS.md  ASSET_INVENTORY.md  Dockerfile  IMPLEMENTATION_NOTE.md  PLAN_COMPLIANCE_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TASKS.md  TASKS_CODEX_COMPLIANT.md  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  lighthouse-budget.json  lighthouserc.json  manage.py  pyproject.toml
.github/: dependabot.yml
config/: asgi.py  celery.py  urls.py  wsgi.py
data/: SOURCE_CATALOG_SCHEMA.md  source_catalog_import.csv
docs/: 00_PROJECT_MASTER_PLAN.md  01_ARCHITECTURE.md  02_DATA_MODEL.md  03_AUTOMATION.md  04_SECURITY.md  05_SEO_ANALYTICS_ADS.md  06_UX_UI_FUNCTIONAL_SPEC.md  07_DEPLOYMENT_RUNBOOK.md  08_TEST_ACCEPTANCE.md  09_CODEX_CONTEXT_MAP.md  10_DECISIONS_AND_CHANGELOG.md  ADMIN_SECURITY.md  ADSENSE_ENVIRONMENT.md  BACKUP_RESTORE.md  CALL_DATA_QUALITY.md  CLOUDFLARE_ORIGIN_LOCKDOWN.md  CLOUDFLARE_SECURITY_RULES.md  CONTACT_EMAIL_REQUIREMENTS.md  CONTROLLED_BACKFILL.md  CORE_WEB_VITALS_BUDGETS.md  DOMAIN_DNS_PLAN.md  FIRST_72_HOUR_MONITORING_REPORT.md  GUZELHOSTING_DNS_CHECKLIST.md  HOST_HARDENING_BASELINE.md  INDEX.md  MONITORING_LOGGING.md  OWASP_ASVS_L1_CHECKLIST.md  SECURITY_HEADERS.md  SOURCE_CATALOG_VALIDATION.md  STAGING_SOURCE_IMPORT.md  STAGING_SSL_NGINX.md  SUPPLY_CHAIN_SECURITY.md  THIRD_CONTROLLED_BACKFILL_CANDIDATES.md
nginx/: default.cloudflare.conf  default.conf  staging.host.conf
ops/: deploy.sh
requirements/: base.txt  dev.txt
(+249 files in other folders)
