[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hiberota"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["apps", "automation", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "automation", "config", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["DJ001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["media", "staticfiles"]

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]
